# OATpy

./: Cargo.toml  LICENSE  README.md
api_drafts/: draft_chx.rs  draft_finitefield.rs  draft_matrix.rs  draft_phcalc.rs  draft_simplex.rs  draft_simplicial_complex.rs  notes_matrixtype.rs  old_draft_chx.rs  old_draft_matrix.rs  trash_compressed_row_format.rs  trash_decomposition.rs  trash_decomposition1.rs
api_notes/: rust_general.md  rust_slice.md  rust_structs.md  rust_types.md
src/: chx.rs  clique.rs  csm.rs  cubical.rs  decomp_col.rs  decomp_col_use_pairs.rs  decomp_row.rs  decomp_row_use_pairs.rs  lib.rs  matrix.rs  solver.rs  umatch.rs
